manifests/stage/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semesterly
  namespace: semesterly-stage
spec:
  selector:
    matchLabels: 
      app: semesterly
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: semesterly
    spec:
      containers:
      - name: nginx
        image: semesterly.azurecr.io/semesterly-nginx:Version
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 60
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 60
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 750m   
            memory: 2048M
      - name: pgbouncer
        image: uisacr.azurecr.io/pgbouncer:latest
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: 500m
          limits:
            cpu: 2048m   
            memory: 4096M
      - name: gunicorn
        image: semesterly.azurecr.io/semesterly:Version
        command: ["bash"]
        args: ["-c","python manage.py migrate; gunicorn semesterly.wsgi wsgi:application --bind=0.0.0.0:8000 --preload --workers=16 --max-requests=16384 --access-logfile - --error-logfile - --log-level info"]  
        workingDir: /code
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 60
          successThreshold: 1
          failureThreshold: 5
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 2000m
            memory: 2048M
